Add privacy page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                     <li v-for="(server, index) in servers" class="nav-item">
                         <a @click="currentServer = servers[index]" class="nav-link" href="#">{{server.name}}</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/OpenRedstoneEngineers/Privacy-Policy/blob/main/static_site.md">Privacy</a>
+                    </li>
                 </ul>
             </div>
         </nav>
