--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 </head>
 <body style="overflow:hidden;">
 <div id="maps">
+    <div class="modal hide fade" id="httpModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">HTTPS</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>This page currently does not work under HTTPS.</p>
+                </div>
+                <div class="modal-footer">
+                    <a type="button" class="btn btn-primary" href="http://maps.openredstone.org">Go to HTTP</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <div :if="!fetching">
         <nav ref="nav" id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="https://openredstone.org">ORE</a>
@@ -32,4 +50,11 @@
     </div>
 </div>
 <script src="js/main.js"></script>
+<script type="text/javascript">
+    $(window).on('load', function() {
+        if (location.protocol === 'https:') {
+            $('#httpModal').modal('show');
+        }
+    });
+</script>
 </body>
