--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
                 </div>
                 <div class="modal-body">
                     <p>This page currently does not work under HTTPS.</p>
-                </div>
-                <div class="modal-footer">
-                    <a type="button" class="btn btn-primary" href="http://maps.openredstone.org">Go to HTTP</a>
+                    <p>Edit the URL of this page to be "http://"</p>
                 </div>
             </div>
         </div>
